# wallet-monitoring

./: .gitignore  README.md  evidence.config.yaml  package.json  pyproject.toml
.github/workflows/: deploy_wm.yml  full_run.yml  manual_deploy_wm.yml  manual_run_pipelines.yml  run_pipelines.yml
archived/tests/: export_db.py
archived/wallet_pipeline/: main.py
data/: chains.json  plan_mapping.csv  wallets.duckdb  zapper_apps.csv  zapper_apps.json
data/sql/: views.sql
monitor/: evidence.config.yaml  package-lock.json  package.json
monitor/pages/: cover_list.md  cover_tracker.md  exposure.md  index.md  individual_cover.md  test.md
monitor/queries/: wallet_positions.sql
pipelines/: debank_chains.py  debank_pipeline.py  dune_pipeline.py  main.py
pipelines/.dlt/: config.toml
pipelines/tests/: access_loaded_data.py  test.py
transform/: config.yaml
transform/models/: capital_pool.sql  cover.sql  cover_agg.sql  cover_chain_diff_totals.sql  cover_chain_diff_totals_daily.sql  cover_chain_totals.sql  cover_chain_totals_daily.sql  cover_totals.sql  cover_totals_daily.sql  cover_wallet.sql  cover_wallet_enriched.sql  cover_wallet_enriched_daily.sql  cover_wallet_protocol_diff_totals.sql  cover_wallet_protocol_diff_totals_daily.sql  cover_wallet_protocol_totals.sql  cover_wallet_protocol_totals_daily.sql  debank_data.sql  debank_data_daily.sql  debank_data_daily_diff.sql  debank_data_daily_match.sql  debank_data_latest.sql  debank_data_latest_diff.sql  debank_data_latest_match.sql  duped_all_wallets.sql  duped_wallets.sql  (+19 more)
wallet_pipeline/: main.py  zapper_test.py
(+80 files in other folders)
