[tool.poetry]
name = "wallet-monitoring"
version = "0.1.0"
description = ""
authors = ["tomfutago <tomfutago@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
duckdb = "^1.1.3"
fsspec = "^2024.10.0"
dune-client = "^1.7.7"
dlt = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
