[tool.poetry]
name = "wallet-monitoring"
version = "0.1.0"
description = ""
authors = ["tomfutago <tomfutago@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
duckdb = ">=1.2.0,<1.4.0"
fsspec = "^2024.10.0"
dune-client = "^1.7.7"
dlt = {extras = ["cli", "motherduck", "parquet"], version = "^1.5.0"}
sqlmesh = {extras = ["web"], version = "^0.141.1"}
ipython = "8.36.0"  # needed ver below 9.0.0 for sqlmesh to work

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
